# Luwu-OS

./: .gitignore  HARDWARE_PLAN.md  README.md  README_CN.md  requirements.txt
.qoder/rules/: rule.md
apps/ai/: asr_manager.py  config.json  main.py
apps/ball_catch/: main.py
apps/ball_track/: main.py
apps/bluetooth_gamepad/: main.py  mapping_server.py  qr_page.py
apps/coding/: coding_page.py  config.py  main.py  managers.py  upgrade_server.py
apps/face_follow/: main.py
apps/gamepad/: joystick_adapter.py  main.py  mapping_server.py  qr_page.py
apps/gesture/: main.py
apps/group_perform/: main.py
apps/hotspot/: main.py
apps/joystick/: main.py
apps/network/: main.py
apps/perform/: main.py
apps/radar/: main.py
apps/rc_mode/: main.py
apps/settings/: main.py
apps/sound_locate/: fix.py  fix2.py  fix3.py  main.py
configs/: 99-gamepad-no-mouse.rules  cm4-old.config  hardware_autoconf.py  install.sh  kill-splash.sh  luwu-hw-autoconf.service  luwu-keys.dts  luwu-launcher.service  luwu-splash.sh  luwu-undervolt-monitor.py
docs/: ROS2_DOCKER_ARCH.md  boot-display-research.md  network-app.md  theme.md
launcher/: CMakeLists.txt  demogridview.cpp  demogridview.h  galleryview.cpp  galleryview.h  i18n.cpp  i18n.h  keyfilter.h  luwu_launcher  main.cpp
libs/: i18n.py
libs/gamepad_config/: ble_gatt_monitor.py  ble_hid_reader.py  calibrate_buttons.py  gamepad_controller.py  (+3 more)
libs/xgoedu-luwuos/: edulib.py  pyproject.toml
libs/xgoedu-luwuos/xgoedu/: edulib.py
libs/xgoedu-luwuos/xgoedu_luwuos.egg-info/: PKG-INFO
model/: xiaolu_tongxue.onnx
(+13 files in other folders)
