[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xgoedu-luwuos"
version = "2.0.6"
description = "XGO 机器人教育库（LuwU OS 新镜像版）"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.7"
dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.19.0",
    "Pillow>=8.0.0",
    "onnxruntime>=1.8.0",
    "pyzbar>=0.1.8",
    "pyserial>=3.5",
    "PySide6>=6.5.0",
    "evdev>=1.6.0",
]
[tool.setuptools.packages.find]
where = ["."]
include = ["xgoedu*"]